# phone-key

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/docs/: bluetooth-api.md  usb-api.md
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
cli/: .gitignore  Cargo.toml  README.md  go.mod  go.sum  package-lock.json  package.json  requirements.txt  setup.py  tsconfig.json
cli-go/: 99-phone-key.rules  build.sh  go.mod  go.sum
cli-go/development/: test-ssh-list-identities.sh  test-ssh-sign.sh
cli-go/development/test-usb/: main.go
cli-go/src/: main.go
cli-go/src/phonekey/: config.go  ssh-agent.go  usb.go
cli-rust/: Cargo.toml
cli-rust/src/: main.rs
cli/bluetooth/: bluetooth.go
cli/cmd/ssh-agent/: agent.go  main.go  test-ssh-list-identities.sh  test-ssh-sign.sh
cli/cmd/test-bluetooth/: main.go
cli/config/: config.go
cli/development/: receive_bluetooth_message.py  send_bluetooth_message.py  test-bluetooth.rs  test-ssh-sign.sh
cli/internal/bluetooth/: bluetooth.go
cli/internal/commands/ssh-agent/: agent.go  main.go
cli/internal/core/bluetooth/: bluetooth.go  frame.go
cli/scripts/: send-bluetooth-message.ts  send_bluetooth_message.py
cli/src/: bluetooth.rs  config.rs  lib.rs  ssh-agent.rs
mobile-app/: .gitignore  app.json  package-lock.json  package.json
mobile-app/modules/main/: expo-module.config.json
mobile-app/src/app-impl/: _layout.tsx  bluetooth-commands-handler.ts  bluetooth-gate.tsx  index.tsx  (+4 more)
(+80 files in other folders)
