[package]
name = "cli-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "send-bluetooth-message"
path = "development/send-bluetooth-message.rs"

[dependencies]
bluer = { version = "0.17", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
