[package]
name = "phone-key-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "send-bluetooth-message"
path = "development/send-bluetooth-message.rs"

[[bin]]
name = "ssh-agent"
path = "src/ssh-agent.rs"

[dependencies]
bluer = { version = "0.17", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
ssh-agent-lib = "0.6"
base64 = "0.22"
futures = "0.3"
